--- a/index.html
+++ b/index.html
@@ -1,137 +1,105 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Tropicália</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Exemplo de Site</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-    <header class=" p-5">
 
-        <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/Esportes.png" alt="Logotipo da Tropicália" class="nav-img " loading="lazy">
-            <ul class="nav mt-5">
-                <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
-                <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-            </ul>
-            <div id="acessibilidade" class="menu-acessibilidade">
-                <button id="botao-acessibilidade" class="btn btn-primary fw-bold rotacao-botao">acessibilidade</button>
-                <div id="opcoes-acessibilidade" class="opcoes-acessibilidade apresenta-lista">
-                    <button id="aumentar-fonte" class="btn btn-primary fw-bold">A+</button>
-                    <button id="diminuir-fonte" class="btn btn-primary fw-bold">A-</button>
-                    <button id="alterna-contraste" class="btn btn-primary fw-bold"> <i
-                            class="bi bi-shadows"></i></button>
-                </div>
-            </div>       
-        </nav>
-       
-    </header>
+  <header>
+    <div class="logo-titulo">
+      <img src="https://via.placeholder.com/60" alt="Logo do site" />
+      <h1>Meu Site Incrível</h1>
+    </div>
+    <nav>
+      <ul class="menu">
+        <li><a href="#inicio">Início</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#galeria">Galeria</a></li>
+        <li><a href="#contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <section class="titulo">
+    <h2>Bem-vindo ao nosso mundo!</h2>
+  </section>
 
-    
-    <main class="container my-5">
+  <section class="banner-principal">
+    <img src="flor-esquerda.png" alt="Banner principal" />
+  </section>
 
-        <section id="inicio" class="my-5">
-            <div class="inicio-fundo d-flex justify-content-between align-items-center">
-                <div class="esquerda-conteudo">
-                    <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="Esporm work.png" class="mb-3" width="563" height="278" loading="lazy">
-                    <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
-                        conhecer!</a>
-                </div>
-                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png"
-                    alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone"
-                    title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+  <section class="conteudo invertido">
+    <div class="texto">
+      <h3>Seção 1</h3>
+      <p>Descrição da seção 1.</p>
+    </div>
+    <img src="https://via.placeholder.com/400x250" alt="Imagem seção 1" />
+  </section>
 
-            </div>
-        </section>
+  <section class="conteudo">
+    <img src="https://via.placeholder.com/400x250" alt="Imagem seção 2" />
+    <div class="texto">
+      <h3>Seção 2</h3>
+      <p>Descrição da seção 2.</p>
+    </div>
+  </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
-            <div class="container d-flex align-items-center ">
-                <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
-                </div>
-                <div class="col-5">
-                    <h2>O que são esportes?</h2>
-                    <p class="p-2">Em resumo, esporte é uma atividade física com regras,
-                         geralmente competitiva, praticada por lazer, saúde ou entretenimento, 
-                         com grande variedade de modalidades e impacto social e cultural.</p>
-                </div>
-            </div>
-        </section>
+  <section class="conteudo invertido">
+    <div class="texto">
+      <h3>Seção 3</h3>
+      <p>Descrição da seção 3.</p>
+    </div>
+    <img src="https://via.placeholder.com/400x250" alt="Imagem seção 3" />
+  </section>
 
-        <section id="galeria">
-            <h2 class="text-center pt-5">Galeria</h2>
-            <div class="container p-3 mt-3 fundo-galeria ">
+  <section class="galeria">
+    <h2>Galeria de Imagens</h2>
+    <div class="grid-galeria">
+      <img src="https://via.placeholder.com/200" alt="Imagem galeria 1" />
+      <img src="https://via.placeholder.com/200" alt="Imagem galeria 2" />
+      <img src="https://via.placeholder.com/200" alt="Imagem galeria 3" />
+      <img src="https://via.placeholder.com/200" alt="Imagem galeria 4" />
+      <img src="https://via.placeholder.com/200" alt="Imagem galeria 5" />
+      <img src="https://via.placeholder.com/200" alt="Imagem galeria 6" />
+    </div>
+  </section>
 
-                <div class="row justify-content-md-center">
-                    <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
-                    </div>
-                    <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
-                            loading="lazy">
-                    </div>
-                </div>
-                <div class="row mt-4  justify-content-md-center">
-                    <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5"
-                            loading="lazy">
-                    </div>
-                    <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
-                            class="img-fluid rounded-5" loading="lazy">
-                    </div>
-                </div>
-            </div>
-        </section>
+  <section class="seis-imagens">
+    <h2>Destaques</h2>
+    <div class="grid-destaques">
+      <div class="item">
+        <img src="https://via.placeholder.com/150" alt="Destaque 1" />
+        <p>Título 1</p>
+      </div>
+      <div class="item">
+        <img src="https://via.placeholder.com/150" alt="Destaque 2" />
+        <p>Título 2</p>
+      </div>
+      <div class="item">
+        <img src="https://via.placeholder.com/150" alt="Destaque 3" />
+        <p>Título 3</p>
+      </div>
+      <div class="item">
+        <img src="https://via.placeholder.com/150" alt="Destaque 4" />
+        <p>Título 4</p>
+      </div>
+      <div class="item">
+        <img src="https://via.placeholder.com/150" alt="Destaque 5" />
+        <p>Título 5</p>
+      </div>
+      <div class="item">
+        <img src="https://via.placeholder.com/150" alt="Destaque 6" />
+        <p>Título 6</p>
+      </div>
+    </div>
+  </section>
 
-        <section id="contato">
-            <div class="container p-5 d-flex justify-content-center">
-                <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Entre em contato</h2>
-                    <form>
-                        <div class="form-group mb-3">
-                            <label for="nome">Nome</label>
-                            <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu nome completo">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu email">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="mensagem">Mensagem</label>
-                            <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
-                                placeholder="Escreva sua mensagem"></textarea>
-                        </div>
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-lg rounded-pill">Enviar
-                                mensagem</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="text-center p-3 fst-italic">
-        <p>Acesse nossas redes:</p>
-        <i class="bi bi-whatsapp"></i>
-        <i class="bi bi-instagram"></i>
-        <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
-    </footer>
-    <script src="script.js"></script>
+  <footer>
+    <p>&copy; 2025 Meu Site. Todos os direitos reservados.</p>
+  </footer>
 
 </body>
-
 </html>
