--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo-titulo">
       <img src="logo.png" alt="Logo do site" />
-      <h1>Meu Site Incrível</h1>
+      <h1>Conexão Campo e cidade</h1>
     </div>
     <nav>
       <ul class="menu">
