--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="logo-titulo">
-      <img src="png/logo.png" alt="Logo do site" />
+      <img src="logo.png" alt="Logo do site" />
       <h1>Conexão Campo e cidade</h1>
     </div>
     <nav>
@@ -28,7 +28,7 @@
   </section>
 
   <section class="banner-principal">
-    <img src="png/banner.png" alt="Banner principal" />
+    <img src="banner.png" alt="Banner principal" />
   </section>
 
   <section class="conteudo invertido">
