--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo-area">
-            <span>[Seu Logo Aqui]</span>
-        </div>
+       <div class="logo-area">
+    <img src="logo.png" alt="logo.png">
+</div>
         <div class="slogan-area">
             <span>Comunicação campo cidade - Uma ponte entre dois mundos!</span>
         </div>
@@ -96,7 +96,7 @@
 
         <aside class="destaque">
             <h2>Destaque</h2>
-            <img src="https://via.placeholder.com/150" alt="Imagem Destaque">
+            <img src="banner.png" alt="Imagem Destaque">
             <h3>Projeto "Mãos na Terra, Sabores na Mesa"</h3>
             <p>Conheça um projeto inspirador que conecta pequenos agricultores com restaurantes da cidade, promovendo a agricultura familiar e o acesso a alimentos frescos e de qualidade.</p>
             <a href="#">Saiba mais sobre o projeto</a>
